[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["limmer"]

[project]
name = "limmer"
version = "0.2.2"
dependencies = [
  "ctypes; os_name != 'nt'",
]
requires-python = ">= 3.9"
authors = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
maintainers = [
  {name = "Cariel Becker", email = "cariel.becker@gmx.de"},
]
description = "A lightweight and easy way to improve your terminal apps."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
keywords = ["terminal", "cmd", "command line", "lightweight", "glimmer"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Programming Language :: Python",
	"Natural Language :: English"
]

[project.urls]
Home = "https://pypi.org/project/limmer/"
Repository = "https://github.com/adalfarus/limmer"
Documentation = "https://github.com/adalfarus/limmer/wiki"
"Issue tracker" = "https://github.com/adalfarus/limmer/issues"

#[tool.pytest.ini_options]
## This is equivalent to setup_requires and tests_require
## Add your pytest configuration here
#addopts = "your pytest options"

#[project.scripts]
#run_apt_tests = "aplustools.tests:main"
